--- a/app/src/main/res/layout/info_coins.xml
+++ b/app/src/main/res/layout/info_coins.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<layout>
+    <data>
+        <variable name="infocoin" type="com.naldana.ejemplo10.model.infoModelCoin"/>
+    </data>
+    <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -26,8 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:gravity="center"
-                android:layout_weight="4"
-                />
+                android:layout_weight="4"/>
         <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="match_parent"
@@ -36,7 +39,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/color_black"
                 android:layout_weight="2"
-                android:text="Name"/>
+                android:text="@{infocoin.name}"/>
         <TextView
                 android:id="@+id/tv_country"
                 android:layout_width="match_parent"
@@ -45,8 +48,9 @@
                 android:textSize="16sp"
                 android:layout_weight="1"
                 android:textColor="@color/color_black"
-                android:text="Country"/>
+                android:text="@{infocoin.country}"/>
     </LinearLayout>
     </android.support.v7.widget.CardView>
 
-</LinearLayout>
+    </LinearLayout>
+</layout>
