--- a/app/src/main/res/layout/info_coins.xml
+++ b/app/src/main/res/layout/info_coins.xml
@@ -39,7 +39,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/color_black"
                 android:layout_weight="2"
-                android:text="@{infocoin.name}"/>
+                android:text="Name"/>
         <TextView
                 android:id="@+id/tv_country"
                 android:layout_width="match_parent"
@@ -48,7 +48,7 @@
                 android:textSize="16sp"
                 android:layout_weight="1"
                 android:textColor="@color/color_black"
-                android:text="@{infocoin.country}"/>
+                android:text="Country"/>
     </LinearLayout>
     </android.support.v7.widget.CardView>
 
